fix(controller):fix all controllers and migration database
